--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     
     <meta name="Keywords" content="Contact Jackson (JP)">
     <meta name="Description" content="Contact form for Jackson (JP)">
-    <link rel="stylesheet" type="text/css" href="./contact_files/contact.css">
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
     <title>Contact Jackson</title>
   </head>
   <body>
     <!-- Header Section Here -->
     <header>
-      <div><a href="https://jacksonporterjp.com/"><img class="logol" src="./contact_files/jacksonporterjplogocrop.jpg" alt="Jackson Porter
+      <div><a href="https://jacksonporterjp.com/"><img class="logol" src="img/jacksonporterjplogocrop.jpg" alt="Jackson Porter
             (JP) logo"></a>
         <h1 class="pagetitle"><i>Contact Jackson (JP)</i><br>
         </h1>
@@ -28,7 +28,7 @@
     </nav>
     <!-- Article Section Here -->
     <article>
-        <img class="logor" src="./contact_files/user_helpdesk_contact.png" alt="Person with Phone Headset icon" height="250">
+        <img class="logor" src="img/user_helpdesk_contact.png" alt="Person with Phone Headset icon" height="250">
         <h2>Contact Form</h2>
       <form name="contactform" method="post" action="https://jacksonporterjp.com/contact/sendmessage.php"> Name:<br>
         <input name="name" type="text"> <br>
@@ -43,7 +43,7 @@
         <hr class="subarticle">
         <h2>Feedback Form</h2>
 
-        <img class="logor" src="./contact_files/Contact-icon.png" alt="Clipboard and pencil icon" height="250">
+        <img class="logor" src="img/Contact-icon.png" alt="Clipboard and pencil icon" height="250">
       <form name="feedbackform" method="post" action="https://jacksonporterjp.com/contact/sendfeedback.php"> Name:<br>
         <input name="name" type="text"> <br>
         Email:<br>
@@ -59,7 +59,7 @@
     <!-- FOOTER SECTION BEGINS HERE -->
     <footer>
       <hr class="article"> <br>
-      <a href="https://www.vim.org/"><img class="logol" src="./contact_files/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
+      <a href="https://www.vim.org/"><img class="logol" src="img/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a>Website edited with the VIM text
           editor<br>
           Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
@@ -67,7 +67,7 @@
           Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
         &nbsp;<br>
       </div>
-      <a href="https://www.seamonkey-project.org/"><img class="logol" src="./contact_files/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo" height="60"></a><a> </a>
+      <a href="https://www.seamonkey-project.org/"><img class="logol" src="img/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a> Website edited with Mozilla
           SeaMonkey<br>
           Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
@@ -75,7 +75,7 @@
           Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
         &nbsp;<br>
       </div>
-      <a href="https://code.visualstudio.com/"><img class="logol" src="./contact_files/vsclogo.png" alt="Visual Studio Code Logo" height="60"></a><a> </a>
+      <a href="https://code.visualstudio.com/"><img class="logol" src="img/vsclogo.png" alt="Visual Studio Code Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a> Website edited with Visual Studio
           Code <br>
           <br>
