--- a/se.html
+++ b/se.html
@@ -7,17 +7,16 @@
     <meta name="Description" content="ePortfolio for Jackson Porter,
       Software Engineering Student.">
     <meta http-equiv="refresh" content="5;url=https://jacksonporter.jimdo.com/software-engineering/">
-    <link rel="stylesheet" type="text/css" href="se/se.css">
+    <link rel="stylesheet" type="text/css" href="css/se.css">
     <title>Software Engineering</title>
   </head>
   <body>
     <!-- Header Section Here -->
     <header>
-      <div><a href="/"><img class="logol"
-            src="se/jacksonporterjplogocrop.jpg" alt="Jackson Porter
+      <div><a href="https://jacksonporterjp.com/"><img class="logol" src="img/jacksonporterjplogocrop.jpg" alt="Jackson Porter
             (JP) logo"></a>
-        <h1 class="pagetitle"><i>Software Engineering (SE)<br>
-          </i></h1>
+        <h1 class="pagetitle"><i>Contact Jackson (JP)</i><br>
+        </h1>
       </div>
     </header>
     <!-- Navigation Section Here -->
@@ -37,53 +36,33 @@
     <!-- Footer Section Here -->
     <footer>
       <hr class="article"> <br>
-      <a href="https://www.vim.org"><img class="logol"
-          src="se/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
+      <a href="https://www.vim.org/"><img class="logol" src="img/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a>Website edited with the VIM text
           editor<br>
-          Image by </a><a
-          href="//commons.wikimedia.org/wiki/User:D0ktorz"
-          title="User:D0ktorz">User:D0ktorz</a><a
-          href="//commons.wikimedia.org/wiki/File:Vimlogo.png"
-          class="image"><br>
-        </a> reworked in SVG, <a
-          href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a
-          href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
+          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
+        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
+          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
         &nbsp;<br>
       </div>
-      <a href="https://www.seamonkey-project.org/"><img class="logol"
-          src="se/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo"
-          height="60"></a><a> </a>
+      <a href="https://www.seamonkey-project.org/"><img class="logol" src="img/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a> Website edited with Mozilla
           SeaMonkey<br>
-          Image by </a><a
-          href="//commons.wikimedia.org/wiki/User:D0ktorz"
-          title="User:D0ktorz">User:D0ktorz</a><a
-          href="//commons.wikimedia.org/wiki/File:Vimlogo.png"
-          class="image"><br>
-        </a> reworked in SVG, <a
-          href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a
-          href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
+          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
+        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
+          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
         &nbsp;<br>
       </div>
-      <a href="https://code.visualstudio.com/"><img class="logol"
-          src="se/vsclogo.png" alt="Visual Studio Code Logo"
-          height="60"></a><a> </a>
+      <a href="https://code.visualstudio.com/"><img class="logol" src="img/vsclogo.png" alt="Visual Studio Code Logo" height="60"></a><a> </a>
       <div class="centerarticle"> <a> Website edited with Visual Studio
           Code <br>
           <br>
-        </a><a
-          href="https://commons.wikimedia.org/w/index.php?curid=63959850">Link</a><br>
+        </a><a href="https://commons.wikimedia.org/w/index.php?curid=63959850">Link</a><br>
         <strong><br>
         </strong>
       </div>
         <hr class="article"> <br>
         <strong>Jackson Porter ePortfolio</strong> <br>
-        <a href="/">Home</a> | <a href="resume.html">Resume</a> | <a
-        href="contact.html"> Contact</a> | <a
-          href="se.html"> Software Engineering (SE)</a>
+        <a href="https://jacksonporterjp.com/">Home</a> | <a href="https://jacksonporterjp.com/resume.html">Resumé</a> | <a href="https://jacksonporterjp.com/contact.html"> Contact</a> | <a href="https://jacksonporterjp.com/se.html"> Software Engineering (SE)</a>
         &nbsp;<br><br>
         <strong>Content on this site is NOT to be copied unless
           permission is given by owner.</strong><br>
