Fixed src of img to reflect updated location.

--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
           <tr class="center">
             <td class="sectionheader" rowspan="1" colspan="1">
               <h2><b>Jackson Porter (JP)</b></h2>
-              <img src="resume/jacksonjp.jpg" alt="Picture of Jackson
+              <img src="img/jacksonjp.jpg" alt="Picture of Jackson
                 Porter (JP)" width="201" height="134"><br>
               <br>
             </td>
