Added favicon to HTML files

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <meta name="Keywords" content="Resumé">
     <meta name="Description" content="Resume for Jackson Porter">
     <link rel="stylesheet" type="text/css" href="css/resume.css">
+    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
     <title>Jackson's Resumé</title>
   </head>
   <body>
