--- a/se.html
+++ b/se.html
@@ -8,6 +8,7 @@
       Software Engineering Student.">
     <meta http-equiv="refresh" content="5;url=https://jacksonporter.jimdo.com/software-engineering/">
     <link rel="stylesheet" type="text/css" href="css/se.css">
+    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
     <title>Software Engineering</title>
   </head>
   <body>
