--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@ permalink: /404.html
     <meta name="Description" content="Page Not Found">
     <link rel="stylesheet" type="text/css"
       href="css/pagenotfound.css">
+      <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
     <title>Page Not Found</title>
   </head>
   <body>
