--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="Keywords" content="Contact Jackson (JP)">
     <meta name="Description" content="Contact form for Jackson (JP)">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
+    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
     <title>Contact Jackson</title>
   </head>
   <body>
