--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="Description" content="ePortfolio for Jackson Porter,
       Software Engineering Student.">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
     <title>Jackson's ePortfolio</title>
   </head>
   <body>
