Fixing picture location error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Article Section Here -->
     <article>
       <div class="floatright"> <video controls="controls"
-          poster="vid/jacksonjp.jpg" width="200" height="400"> <source
+          poster="img/jacksonjp.jpg" width="200" height="400"> <source
             src="vid/introvideo.ogg"> <source
             src="vid/introvideo.webm"> <source
             src="vid/introvideo.mp4"> Your browser doesn't support
