moving from final web2 project

--- a/index.html
+++ b/index.html
@@ -1,125 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="Keywords" content="Jackson Porter's ePortfolio">
-    <meta name="Description" content="ePortfolio for Jackson Porter,
-      Software Engineering Student.">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
-    <title>Jackson's ePortfolio</title>
-  </head>
-  <body>
-    <!-- Header Section Here -->
+
+<head>
+    <meta charset="utf-8">
+    <title>Jackson Porter (JP)</title>
+    <meta name="description" content="A personal website for Jackson Porter">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" href="favicon.ico">
+    <!--CSS Stylesheets-->
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--HTML5 Boilerplate CSS/Normalize/Main Site CSS-->
+    <link rel="stylesheet" href="css/main.css">
+    <!--Page Specific Stylesheet-->
+    <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+    <!--[if IE]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
     <header>
-      <div><a href="https://jacksonporterjp.com/"><img class="logol" src="img/jacksonporterjplogocrop.jpg" alt="Jackson Porter
-            (JP) logo"></a>
-        <h1 class="pagetitle"><i>Contact Jackson (JP)</i><br>
-        </h1>
-      </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Jackson Porter (JP)</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="resumé.html">Resumé</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <!-- Navigation Section Here -->
-    <nav>
-      <ul>
-        <li><strong><a href="/">Home</a></strong></li>
-        <li><a href="resume.html"><strong>Resumé</strong></a></li>
-        <li><strong><a href="contact.html">Contact</a></strong></li>
-        <li><strong><a href="se.html">Software
-              Engineering (SE)</a></strong></li>
-      </ul>
-    </nav>
-    <!-- Article Section Here -->
     <article>
-      <div class="floatright"> <video controls="controls"
-          poster="img/jacksonjp.jpg" width="200" height="400"> <source
-            src="vid/introvideo.ogg"> <source
-            src="vid/introvideo.webm"> <source
-            src="vid/introvideo.mp4"> Your browser doesn't support
-          HTML5 video :( Upgrade today!</video> </div>
-          <h2>About JP</h2>
-      My name is Jackson Porter, welcome to my online ePortfolio. This
-      portfolio allows you to see my accomplishments, my work and my
-      personality. Please feel free to <a href="contact.html">contact
-        me</a> at any time.<br>
-      <br>
-      <b><u>Software Engineer<br>
-        </u></b>Technology has been a hobby since I could remember. I am
-      curious; I want to know more! I am highly skilled with computers,
-      with knowledge in Java, C#, MS SQL, BASH Scripting, MIPS
-      architecture and basic Operating Systems knowledge for Windows, OS
-      X (Mac) and Linux (specifically Ubuntu based distributions).I am
-      currently taking classes towards my Bachelor's Degree in Software
-      Engineering through Snow College. I have received two Associate's
-      degree from Snow College in 2016 and 2017 in Arts and Science.
-      View my highlighted schoolwork in the Software Engineering Page. I
-      have worked as an IT Help Desk assistant at Snow College as well
-      as operating my own support business in Sanpete County, Utah (<a
-        href="http://valleyct.com">http://valleyct.com</a>). <u><b><br>
-          <br>
-        </b></u><i>Check out my <a
-          href="https://github.com/jacksonporter">GitHub </a>or my <a
-          href="https://bitbucket.org/jacksonporter/">Bitbucket </a>for
-        code and projects.</i><br>
-      <u><b><br>
-          Musician<br>
-        </b></u>I have loved music since I was a child. I have been
-      playing the piano since I was young. I started choir in the 7th
-      grade while eventually joining the A Capella and Madrigal choirs
-      at Murray High School. I am also a newbie to the composition
-      world. I have written multiple songs; one in which I have
-      performed at my high school's talent show. I perform, write and
-      record my own music. Below is a embedded song from my SoundCloud.
-      Check out more of my music at <a
-        href="http://jacksonportermusic.com">http://jacksonportermusic.com</a><br>
-      <br>
-      <iframe class="soundcloudfull" allow="autoplay"
-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/463479903&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe> <br>
-      <br>
-      <u><b>Runner<br>
-        </b></u>I love to run. I started my running career with Cross
-      Country and Track and Field at Murray High School in 2012.
-      Practice is something I look forward to. I was on Murray's Varsity
-      Teams and I was a captain.&nbsp; My personal best in the 3 mile to
-      date is 17:57. My personal best in the 1 mile is 5:15, and 11:30
-      in the two mile.I continue running as I attend Snow College and
-      learn more index Software Engineering. I have volunteered and also
-      worked as a Track and Field Coach at Manti High School during my
-      time at Snow College.<br>
+        <div class="container">
+            <div class="row pt-4 pb-4 page-header">
+                <div class="col-sm-12 text-center text-white">
+                    <h2>About Me, JP</h2>
+                </div>
+            </div>
+            <div class="row pt-4 pb-4">
+                <div class="col-sm-4 home-video">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <video controls="controls" poster="img/video_poster.jpg">
+                            <source src="vid/updatedintrovideo.ogg">
+                            <source src="vid/updatedintrovideo.webm">
+                            <source src="vid/updatedintrovideo.mp4"> 
+                            You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.
+                        </video>
+                    </div>
+                </div>
+                <div class="col-sm-8 text-center">
+                    <p>
+                        My name is Jackson Porter, but lots of people call me JP. Feel free to browse around or <a href="./contact.html">contact me</a> at any time.
+                    </p>
+                    <div class="row text-center pb-1 pt-1">
+                        <div class="col-sm-12 social-box">
+                            <h3 class="social-header">Personal</h3>
+                            <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
+                            <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png" alt="Facebook Messenger Logo - Personal Link" /></a>
+                            <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Personal Link" /></a>
+                            <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid" src="img/twitter-logo.png" alt="Twitter Logo - Personal Link" /></a>
+                            <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo" src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
+                            <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png" alt="Github Logo - Personal Link" /></a>
+                        </div>
+                    </div>
+                    <div class="row text-center pb-1 pt-1">
+                        <div class="col-sm-12 social-box">
+                            <h3 class="social-header">Music</h3>
+                            <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
+                            <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Music Link" /></a>
+                            <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid" src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-sm-12">
+                    <p>
+                        I am a highly skilled software developer with knowledge of <a href="https://www.java.com">Java</a>, <a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C#</a>, <a href="https://www.python.org">Python</a>, <a href="https://www.gnu.org/software/bash/">Bash Shell Scripting</a>,
+                        <a href="https://www.microsoft.com/en-us/sql-server/default.aspx">Microsoft SQL</a> and more.
+                    </p>
+                    <p>
+                        I have an associate's degree in Arts and Science both majoring in Computer Science. I am finishing my Bachelor's Degree in Software Engineering expecting to graduate September 2019. All degrees were worked through <a href="https://www.snow.edu">Snow College</a>.
+                    </p>
+                    <p>
+                        I currently work with <a href="https://ban.jo/">Banjo Inc.</a> as a Software Engineer in back-end development to assist in reducing human suffering.
+                    </p>
+                    <p>
+                        You can catch me developing, running, hiking, recording music and driving around town.
+                    </p>
+                </div>
+            </div>
+        </div>
     </article>
-    <!-- FOOTER SECTION BEGINS HERE -->
     <footer>
-      <hr class="article"> <br>
-      <a href="https://www.vim.org/"><img class="logol" src="img/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a>Website edited with the VIM text
-          editor<br>
-          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
-        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
-        &nbsp;<br>
-      </div>
-      <a href="https://www.seamonkey-project.org/"><img class="logol" src="img/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a> Website edited with Mozilla
-          SeaMonkey<br>
-          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
-        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
-        &nbsp;<br>
-      </div>
-      <a href="https://code.visualstudio.com/"><img class="logol" src="img/vsclogo.png" alt="Visual Studio Code Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a> Website edited with Visual Studio
-          Code <br>
-          <br>
-        </a><a href="https://commons.wikimedia.org/w/index.php?curid=63959850">Link</a><br>
-        <strong><br>
-        </strong>
-      </div>
-        <hr class="article"> <br>
-        <strong>Jackson Porter ePortfolio</strong> <br>
-        <a href="https://jacksonporterjp.com/">Home</a> | <a href="https://jacksonporterjp.com/resume.html">Resumé</a> | <a href="https://jacksonporterjp.com/contact.html"> Contact</a> | <a href="https://jacksonporterjp.com/se.html"> Software Engineering (SE)</a>
-        &nbsp;<br><br>
-        <strong>Content on this site is NOT to be copied unless
-          permission is given by owner.</strong><br>
-        <strong></strong>
+        <div class="container text-white text-center">
+            <hr/>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>Built with
+                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png" alt="Visual Studio Code Logo - Website Link" /></a> using
+                        <a href="https://getbootstrap.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Boostrap_logo.svg" class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
+                        <a class="boilerplate" href="https://html5boilerplate.com/">&#9733;</a>
+                        <a href="https://formspree.io"><img class="img-fluid logo" src="https://formspree.io/img/formspree-logo-mark.png" alt="Formspree Logo - Website Link" /></a>
+                    </p>
+                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="W3C CSS Verified Icon" />
+                    <p class="text-white">
+                        All image rights go to their respective holders.
+                    </p>
+                    <p>
+                        &copy; Jackson Porter 2019
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
-  </body>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
 </html>
