--- a/contact.html
+++ b/contact.html
@@ -1,97 +1,121 @@
-<!DOCTYPE html>
-<!-- saved from url=(0040)https://jacksonporterjp.com/contact.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="Keywords" content="Contact Jackson (JP)">
-    <meta name="Description" content="Contact form for Jackson (JP)">
-    <link rel="stylesheet" type="text/css" href="css/contact.css">
-    <link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
-    <title>Contact Jackson</title>
-  </head>
-  <body>
-    <!-- Header Section Here -->
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Jackson Porter (JP)</title>
+    <meta name="description" content="A personal website for Jackson Porter">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" href="favicon.ico">
+    <!--CSS Stylesheets-->
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--HTML5 Boilerplate CSS/Normalize/Main Site CSS-->
+    <link rel="stylesheet" href="css/main.css">
+    <!--Page Specific Stylesheet-->
+    <link rel="stylesheet" href="css/contact.css">
+</head>
+
+<body>
+    <!--[if IE]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
     <header>
-      <div><a href="https://jacksonporterjp.com/"><img class="logol" src="img/jacksonporterjplogocrop.jpg" alt="Jackson Porter
-            (JP) logo"></a>
-        <h1 class="pagetitle"><i>Contact Jackson (JP)</i><br>
-        </h1>
-      </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Jackson Porter (JP)</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="resumé.html">Resumé</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <!-- Navigation Section Here -->
-    <nav>
-      <ul>
-        <li><strong><a href="https://jacksonporterjp.com/">Home</a></strong></li>
-        <li><a href="https://jacksonporterjp.com/resume.html"><strong>Resumé</strong></a></li>
-        <li><strong><a href="https://jacksonporterjp.com/contact.html">Contact</a></strong></li>
-        <li><strong><a href="https://jacksonporterjp.com/se.html">Software
-              Engineering (SE)</a></strong></li>
-      </ul>
-    </nav>
-    <!-- Article Section Here -->
     <article>
-        <img class="logor" src="img/user_helpdesk_contact.png" alt="Person with Phone Headset icon" height="250">
-        <h2>Contact Form</h2>
-      <form name="contactform" method="post" action="https://jacksonporterjp.com/contact/sendmessage.php"> Name:<br>
-        <input name="name" type="text"> <br>
-        Email:<br>
-        <input name="email" type="text"> <br>
-        Phone Number:<br>
-        <input name="phonenumber" type="text"> <br>
-        Message:<br>
-        <textarea name="message" rows="5" cols="50">Enter Your Message Here</textarea><br>
-        <input value="Send Message" type="submit"> </form>
-
-        <hr class="subarticle">
-        <h2>Feedback Form</h2>
-
-        <img class="logor" src="img/Contact-icon.png" alt="Clipboard and pencil icon" height="250">
-      <form name="feedbackform" method="post" action="https://jacksonporterjp.com/contact/sendfeedback.php"> Name:<br>
-        <input name="name" type="text"> <br>
-        Email:<br>
-        <input name="email" type="text"> <br>
-        Phone Number:<br>
-        <input name="phonenumber" type="text"> <br>
-        Feedback:<br>
-        <textarea name="message" rows="5" cols="50">Enter Your Feedback Here</textarea><br>
-        <input value="Send Feedback" type="submit"> </form>
-      <br>
-      <p>Forms were made with the help of: <a href="http://www.freecontactform.com/email_form.php">Free Contact Form</a></p>
+        <div class="container">
+            <div class="row pt-4 pb-4 page-header">
+                <div class="col-sm-12 text-center text-white">
+                    <h2>Contact</h2>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <div class="col-sm-12 text-center">
+                    <p>Please feel free to contact me via email using the form below or social links listed below:</p><br/>
+                </div>
+            </div>
+            <div class="row text-center pb-1 pt-1">
+                <div class="col-sm-12 social-box">
+                    <h3 class="social-header">Personal</h3>
+                    <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
+                    <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png" alt="Facebook Messenger Logo - Personal Link" /></a>
+                    <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Personal Link" /></a>
+                    <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid" src="img/twitter-logo.png" alt="Twitter Logo - Personal Link" /></a>
+                    <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo" src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
+                    <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png" alt="Github Logo - Personal Link" /></a>
+                </div>
+            </div>
+            <div class="row text-center pb-4 pt-1">
+                <div class="col-sm-12 social-box">
+                    <h3 class="social-header">Music</h3>
+                    <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
+                    <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Music Link" /></a>
+                    <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid" src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <form action="https://formspree.io/contact@jacksonporterjp.com" method="POST">
+                        <div class="form-group">
+                            <label for="name">Full Name:</label><br><input class="form-control" type="text" id="name" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address:</label><br><input class="form-control" type="email" id="email" name="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message:</label><br><textarea class="form-control" id="message" name="message"></textarea>
+                        </div>
+                        <input class="logo" type="image" src="img/send-email.jpg" alt="Send email button">
+                        <small>This cannot be done if you're viewing this page as a HTML locally.</small>
+                    </form>
+                </div>
+                <div class="col-sm-4 side_image">
+                    <img class="side_image bw" src="img/contact-phone.png" alt="Phone Icon">
+                </div>
+            </div>
+        </div>
     </article>
-    <!-- FOOTER SECTION BEGINS HERE -->
     <footer>
-      <hr class="article"> <br>
-      <a href="https://www.vim.org/"><img class="logol" src="img/vimlogo.png" alt="VIM Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a>Website edited with the VIM text
-          editor<br>
-          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
-        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
-        &nbsp;<br>
-      </div>
-      <a href="https://www.seamonkey-project.org/"><img class="logol" src="img/seamonkeylogo.png" alt="Mozilla SeaMonkey Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a> Website edited with Mozilla
-          SeaMonkey<br>
-          Image by </a><a href="https://commons.wikimedia.org/wiki/User:D0ktorz" title="User:D0ktorz">User:D0ktorz</a><a href="https://commons.wikimedia.org/wiki/File:Vimlogo.png" class="image"><br>
-        </a> reworked in SVG, <a href="http://www.gnu.org/licenses/gpl.html" title="GNU General
-          Public License">GPL</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1228427">Link</a><br>
-        &nbsp;<br>
-      </div>
-      <a href="https://code.visualstudio.com/"><img class="logol" src="img/vsclogo.png" alt="Visual Studio Code Logo" height="60"></a><a> </a>
-      <div class="centerarticle"> <a> Website edited with Visual Studio
-          Code <br>
-          <br>
-        </a><a href="https://commons.wikimedia.org/w/index.php?curid=63959850">Link</a><br>
-        <strong><br>
-        </strong>
-      </div>
-        <hr class="article"> <br>
-        <strong>Jackson Porter ePortfolio</strong> <br>
-        <a href="https://jacksonporterjp.com/">Home</a> | <a href="https://jacksonporterjp.com/resume.html">Resumé</a> | <a href="https://jacksonporterjp.com/contact.html"> Contact</a> | <a href="https://jacksonporterjp.com/se.html"> Software Engineering (SE)</a>
-        &nbsp;<br><br>
-        <strong>Content on this site is NOT to be copied unless
-          permission is given by owner.</strong><br>
-        <strong></strong>
+        <div class="container text-white text-center">
+            <hr/>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>Built with
+                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png" alt="Visual Studio Code Logo - Website Link" /></a> using
+                        <a href="https://getbootstrap.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Boostrap_logo.svg" class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
+                        <a class="boilerplate" href="https://html5boilerplate.com/">&#9733;</a>
+                        <a href="https://formspree.io"><img class="img-fluid logo" src="https://formspree.io/img/formspree-logo-mark.png" alt="Formspree Logo - Website Link" /></a>
+                    </p>
+                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="W3C CSS Verified Icon" />
+                    <p class="text-white">
+                        All image rights go to their respective holders.
+                    </p>
+                    <p>
+                        &copy; Jackson Porter 2019
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
-  
 
-</body></html>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
